CSS Bugfix - Make Location-Name overflow hidden if its to long on Cardbox

--- a/app/assets/stylesheets/components/_cardBox.scss
+++ b/app/assets/stylesheets/components/_cardBox.scss
@@ -215,7 +215,12 @@
 .cardBoxContent .initiator {
   margin: -47px 0 15px 0;
   text-decoration: none;
-  display: table;
+  // display: table;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: $color-ambient-mint-dark;
+  white-space: nowrap;
   img {
     vertical-align: bottom;
     position: relative;
